--- a/about me.html
+++ b/about me.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Graphic Designer Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon"
+   <link rel="icon" type="image/jpg" href="images/FAVICON 2.jpg">
 </head>
 <body>
     
