--- a/software.html
+++ b/software.html
@@ -14,12 +14,12 @@
      <!-- Navbar Section -->
       
         <nav class="navbar">
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
             <a href="about me.html">About Me</a>
             <a href="skill.html">Skills</a>
             <a href="experience.html">Experience</a>
             <a href="project.html">Projects</a>
-            <a href="software.html">Software</a>
+            <a href="#">Software</a>
             <a href="contact_me.html">Contact Me</a>
         </nav>
       
