--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
         <div class="text"></div>
       </div>
 
-      <div class="mySlides fade">
+<!--       <div class="mySlides fade">
         <div class="numbertext"></div>
         <img src="images/building2-image-slider.png" style="width:100%">
         <div class="text"></div>
-      </div>
+      </div> -->
 
       <div class="mySlides fade">
         <div class="numbertext"></div>
@@ -182,11 +182,11 @@
         <div class="text"></div>
       </div>
 
-      <div class="mySlides fade">
+<!--       <div class="mySlides fade">
         <div class="numbertext"></div>
         <img src="images/building4-image-slider.png" style="width:100%">
         <div class="text"></div>
-      </div>
+      </div> -->
     
     </div>
     <br>
@@ -211,7 +211,7 @@
  </div> -->
 
  <!-- HVAC | MEP Projects Section -->
- <section class="projects-section">
+<!--  <section class="projects-section">
     <div class="project-heading">
         <h2>HVAC | MEP Projects</h2>
     </div>
@@ -255,7 +255,7 @@
 
 
 
- </section>
+ </section> -->
 
  <!-- Graphic Designer Projects Section -->
  <section class="projects-section">
@@ -485,3 +485,4 @@ My Work Heading
 
 </body>
 </html>
+
