--- a/project.html
+++ b/project.html
@@ -45,11 +45,11 @@
       <div class="text"></div>
     </div>
     
-    <div class="mySlides fade">
+<!--     <div class="mySlides fade">
       <div class="numbertext"></div>
       <img src="images/building3-image-slider.png" style="width:100%">
       <div class="text"></div>
-    </div>
+    </div> -->
 
     <div class="mySlides fade">
         <div class="numbertext"></div>
@@ -57,11 +57,11 @@
         <div class="text"></div>
       </div>
 
-      <div class="mySlides fade">
+<!--       <div class="mySlides fade">
         <div class="numbertext"></div>
         <img src="images/building2-image-slider.png" style="width:100%">
         <div class="text"></div>
-      </div>
+      </div> -->
 
       <div class="mySlides fade">
         <div class="numbertext"></div>
@@ -69,11 +69,11 @@
         <div class="text"></div>
       </div>
 
-      <div class="mySlides fade">
+<!--       <div class="mySlides fade">
         <div class="numbertext"></div>
         <img src="images/building4-image-slider.png" style="width:100%">
         <div class="text"></div>
-      </div>
+      </div> -->
     
     </div>
     <br>
@@ -98,7 +98,7 @@
  </div> -->
 
  <!-- HVAC | MEP Projects Section -->
- <section class="projects-section">
+<!--  <section class="projects-section">
     <div class="project-heading">
         <h2>HVAC | MEP Projects</h2>
     </div>
@@ -142,7 +142,7 @@
 
 
 
- </section>
+ </section> -->
 
  <!-- Graphic Designer Projects Section -->
  <section class="projects-section">
@@ -372,3 +372,4 @@ My Work Heading
 
 </body>
 </html>
+
